--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,8 @@
 services:
   ratelimiter:
-     build: .
+     build:
+      context: .
+      dockerfile: ratelimiter.dockerfile
      ports:
        - "8080:8080"
      volumes:
